[metadata]
name = arduplot
version = 0.1.2
author = Yoonseok Hur
author_email = yoonseok@gmail.com
description = This tool listens the serial port and draws the data to matplotlib.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yhur/arduplot
project_urls =
    Bug Tracker = https://github.com/yhur/arduplot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    matplotlib
    pyserial
    click
scripts =
    bin/arduplot

[options.packages.find]
where = src